--- a/main.css
+++ b/main.css
@@ -2,6 +2,19 @@
     height: 100%;
 }
 
+body {
+    padding: 0;
+    margin: 0;
+}
+
+#homeIcon {
+    float: left;
+}
+
+#an {
+    float: left;
+}
+
 .collapsed:hover {
     background: #ffcc99;
 }
@@ -23,34 +36,33 @@ a:hover {
 }
 
 #home {
-    background-color: #ffcc99;
+    background: #ffcc99 50% 0 no-repeat fixed;
     background-size: cover;
     height: 100vh;
 }
 
 #second {
-    background-color: #ffcc99;
+    background: #ffcc99 50% 0 no-repeat fixed;
     background-size: cover;
     height: 100vh;
 }
 
 #third {
-    background-image: url(images/pag_3.jpg);
+    background: url(images/pag_3.jpg) 50% 0 no-repeat fixed;
     opacity: 0.7;
-    background-size: cover;
     color: white;
     height: 100vh;
-    padding: 100 px 0 0 0;
+    background-size: cover;
+    margin: 0 auto;
+    padding: 0;
 }
 
 #forth {
-    background-image: url(images/pag_4.jpg);
+    background: url(images/pag_4.jpg) 50% 0 no-repeat fixed;
     opacity: 0.7;
     background-size: cover;
+    margin: 0 auto;
+    padding: 0;
     color: white;
     height: 100vh;
-    /*padding: 100 px 0 0 0;*/
-}
-
-
 }
