--- a/css/locate.css
+++ b/css/locate.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:300px) and (max-width:768px) {
+@media screen and (min-width:300px) and (max-width:919px) {
     #homeIcon {
         height: 250px;
         width: 245px;
@@ -17,14 +17,20 @@
     }
 }
 
-@media (min-width:769px) {
+@media (min-width:920px) {
     #homeIcon {
         height: 472px;
         width: 462px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -200px 0 0 -500px;
     }
     #an {
-        position: absolute;
-        /*margin: -250px 0 0 0px;*/
         width: 600px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -0px 0 0 -150px;
     }
 }
