--- a/css/locate.css
+++ b/css/locate.css
@@ -15,6 +15,38 @@
         left: 50%;
         margin: +150px 0 0 -140px;
     }
+    .pag_bg1 {
+        height: 50px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -250px 0 0 +150px;
+    }
+    .pag_bg1:hover {
+        transform: rotate(+10deg);
+    }
+    .pag_bg2 {
+        height: 30px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: +300px 0 0 +230px;
+        transform: rotate(+20deg);
+    }
+    .pag_bg2:hover {
+        transform: rotate(-10deg);
+    }
+    .pag_bg3 {
+        height: 50px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: +95px 0 0 -250px;
+        transform: rotate(-50deg);
+    }
+    .pag_bg3:hover {
+        transform: rotate(-10deg);
+    }
 }
 
 @media (min-width:920px) {
