更改手機版pag2的字體大小

--- a/css/locate.css
+++ b/css/locate.css
@@ -47,6 +47,9 @@
     .pag_bg3:hover {
         transform: rotate(-10deg);
     }
+    #pag2_text {
+        font-size: 60px;
+    }
 }
 
 @media (min-width:920px) {
