--- a/css/locate.css
+++ b/css/locate.css
@@ -21,6 +21,7 @@
         top: 50%;
         left: 50%;
         margin: -250px 0 0 +150px;
+        z-index: 1;
     }
     .pag_bg1:hover {
         transform: rotate(+10deg);
@@ -30,8 +31,9 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        margin: +300px 0 0 +230px;
+        margin: +300px 0 0 +30px;
         transform: rotate(+20deg);
+        z-index: 1;
     }
     .pag_bg2:hover {
         transform: rotate(-10deg);
@@ -43,12 +45,20 @@
         left: 50%;
         margin: +95px 0 0 -250px;
         transform: rotate(-50deg);
+        z-index: 1;
     }
     .pag_bg3:hover {
         transform: rotate(-10deg);
     }
     #pag2_text {
-        font-size: 60px;
+        text-align: center;
+        font-size: 75px;
+        padding-top: 5vh;
+        font-weight: bold;
+        color: #795548;
+    }
+    .p2_main {
+        width: 400px;
     }
 }
 
@@ -74,6 +84,7 @@
         top: 50%;
         left: 50%;
         margin: -200px 0 0 +300px;
+        z-index: 1;
     }
     .pag_bg1:hover {
         transform: rotate(+10deg);
@@ -85,6 +96,7 @@
         left: 50%;
         margin: +250px 0 0 +300px;
         transform: rotate(+20deg);
+        z-index: 1;
     }
     .pag_bg2:hover {
         transform: rotate(-10deg);
@@ -96,12 +108,16 @@
         left: 50%;
         margin: +95px 0 0 +150px;
         transform: rotate(-50deg);
+        z-index: 1;
     }
     .pag_bg3:hover {
         transform: rotate(-10deg);
     }
     #pag2_text {
         padding-top: 5vh;
+        font-size: 100px;
+        font-weight: bold;
+        color: #795548;
     }
     .pag2_coffee {
         font-size: 30px;
