更改pag2的頁面豐個

--- a/css/locate.css
+++ b/css/locate.css
@@ -55,7 +55,7 @@
         font-size: 75px;
         padding-top: 5vh;
         font-weight: bold;
-        color: #795548;
+        color: #4d342f;
     }
     .p2_main {
         width: 400px;
@@ -117,7 +117,7 @@
         padding-top: 5vh;
         font-size: 100px;
         font-weight: bold;
-        color: #795548;
+        color: #4d342f;
     }
     .pag2_coffee {
         font-size: 30px;
