--- a/css/pag2.css
+++ b/css/pag2.css
@@ -1,12 +1,13 @@
 .p2_main {
     color: #fff;
-    float: right;
+    float: left;
     display: none;
     border: 0px solid;
     border-radius: 10px;
     background-color: #4d342f;
     width: 700px;
-    margin: 0 10px 0 0;
+    margin: 0 0 0 12px;
+    padding: 5px 5px 5px 5px;
     opacity: 0.8;
 }
 
