--- a/css/pag2.css
+++ b/css/pag2.css
@@ -7,22 +7,26 @@
     background-color: #4d342f;
     width: 700px;
     margin: 0 0 0 12px;
-    padding: 5px 5px 5px 5px;
+    padding: 5px 5px 0px 5px;
     opacity: 0.8;
 }
 
 .p2_but {
-    border: 2px #ccc solid;
-    border-radius: 10px;
+    border: 0px #4d342f solid;
+    /*border-radius: 10px;*/
     /*color: #4d342f;*/
     color: #fff;
     text-align: center;
     background: #4d342f;
-    border: 0px;
+    /*border: 0px;*/
     z-index: 2;
     opacity: 0.8;
+    transition: background-color 0.5s;
 }
 
 .p2_but:hover {
-    color: #ffcc99;
+    color: #4d342f;
+    background-color: #fff;
+    /*box-shadow: inset 3px 3px 3px rgba(20%, 20%, 40%, 0.5);*/
+    /*box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.5) inset;*/
 }
