更改導覽列按鈕樣式

--- a/css/pag2.css
+++ b/css/pag2.css
@@ -15,7 +15,7 @@
     border: 0px #4d342f solid;
     /*border-radius: 10px;*/
     /*color: #4d342f;*/
-    color: #fff;
+    color: #efebe9;
     text-align: center;
     background: #4d342f;
     /*border: 0px;*/
@@ -26,7 +26,7 @@
 
 .p2_but:hover {
     color: #4d342f;
-    background-color: #fff;
+    background-color: #efebe9;
     /*box-shadow: inset 3px 3px 3px rgba(20%, 20%, 40%, 0.5);*/
     /*box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.5) inset;*/
 }
