--- a/main.css
+++ b/main.css
@@ -24,21 +24,39 @@ body {
     background: #ffcc99;
 }
 
+.text {
+    font-size: 15px;
+    color: #efebe9;
+    /*transition: background-color 0.5s;*/
+}
+
+.text:hover {
+    /*text-shadow: 3px 3px 3px #000000;*/
+    text-shadow: 0px 0px 15px #efebe9;
+}
+
+
+/*
+.test {
+    transition: background-color 0.5s;
+}
+
 .test:hover {
-    background: #a1887f;
-    margin: 0 px;
-    padding: 0 px;
-    /* 當滑鼠經過時，背景顏色改變 */
+    color: #4d342f;
+    background-color: #efebe9;
+    padding: 0 0 0 0;
+     當滑鼠經過時，背景顏色改變
 }
+*/
 
-#hello:hover {
+
+/*#hello:hover {
     background: #a1887f;
-    /* 當滑鼠經過時，背景顏色改變 */
+     當滑鼠經過時，背景顏色改變
 }
-
 a:hover {
     color: #795548;
-}
+}*/
 
 #home {
     /*background: #ffcc99 50% 0 no-repeat fixed;*/
