--- a/css/pag2.css
+++ b/css/pag2.css
@@ -1,12 +1,15 @@
 .p2_main {
     color: #fff;
-    float: left;
+    /*float: left;*/
+    position: absolute;
+    top: 150%;
+    left: 50%;
     display: none;
     border: 0px solid;
     border-radius: 10px;
     background-color: #4d342f;
     width: 700px;
-    margin: 0 0 0 12px;
+    margin: -50px 0 0 -350px;
     padding: 5px 5px 0px 5px;
     opacity: 0.8;
 }
