--- a/css/pag2.css
+++ b/css/pag2.css
@@ -1,17 +1,19 @@
-.p2_main {
-    color: #fff;
-    /*float: left;*/
-    position: absolute;
-    top: 150%;
-    left: 50%;
-    display: none;
-    border: 0px solid;
-    border-radius: 10px;
-    background-color: #4d342f;
-    width: 700px;
-    margin: -50px 0 0 -350px;
-    padding: 5px 5px 0px 5px;
-    opacity: 0.8;
+@media (min-width:920px) {
+    .p2_main {
+        color: #fff;
+        /*float: left;*/
+        position: absolute;
+        top: 150%;
+        left: 50%;
+        display: none;
+        border: 0px solid;
+        border-radius: 10px;
+        background-color: #4d342f;
+        width: 700px;
+        margin: -50px 0 0 -350px;
+        padding: 5px 5px 0px 5px;
+        opacity: 0.8;
+    }
 }
 
 .p2_but {
