測試手機端

--- a/css/locate.css
+++ b/css/locate.css
@@ -26,6 +26,10 @@
         width: 385px;
         float: left;
         margin: 0 0 0 12px;
+        display: none;
+        border: 0px solid;
+        border-radius: 10px;
+        background-color: #4d342f;
     }
 }
 
