手機版測試＿字體顏色更改

--- a/css/locate.css
+++ b/css/locate.css
@@ -23,6 +23,7 @@
         color: #4d342f;
     }
     .p2_main {
+        color: #fff;
         width: 385px;
         float: left;
         margin: 0 0 0 12px;
