--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ body {
 #third {
     background: url(images/pag_3.jpg) 50% 0 no-repeat fixed;
     /*opacity: 0.7;*/
-    color: white;
+    /*color: white;*/
     height: 100vh;
     background-size: cover;
     margin: 0 auto;
@@ -61,6 +61,6 @@ body {
     background-size: cover;
     margin: 0 auto;
     padding: 0;
-    color: white;
+    /*color: white;*/
     height: 100vh;
 }
