--- a/css/pag2.css
+++ b/css/pag2.css
@@ -14,27 +14,47 @@
         padding: 5px 5px 0px 5px;
         opacity: 0.8;
     }
+    .p2_but {
+        border: 0px #4d342f solid;
+        /*border-radius: 10px;*/
+        /*color: #4d342f;*/
+        color: #efebe9;
+        text-align: center;
+        background: #4d342f;
+        /*border: 0px;*/
+        z-index: 2;
+        opacity: 0.8;
+        transition: background-color 0.5s;
+        box-shadow: 4px 4px rgba(0, 0, 0, 0.5);
+    }
+    .p2_but:hover {
+        color: #4d342f;
+        background-color: #efebe9;
+        margin: 4px 4px 0 0;
+        box-shadow: 4px 4px rgba(0, 0, 0, 0);
+        /*box-shadow: inset 3px 3px 3px rgba(20%, 20%, 40%, 0.5);*/
+        /*box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.5) inset;*/
+    }
 }
 
-.p2_but {
-    border: 0px #4d342f solid;
-    /*border-radius: 10px;*/
-    /*color: #4d342f;*/
-    color: #efebe9;
-    text-align: center;
-    background: #4d342f;
-    /*border: 0px;*/
-    z-index: 2;
-    opacity: 0.8;
-    transition: background-color 0.5s;
-    box-shadow: 4px 4px rgba(0, 0, 0, 0.5);
-}
-
-.p2_but:hover {
-    color: #4d342f;
-    background-color: #efebe9;
-    margin: 4px 4px 0 0;
-    box-shadow: 4px 4px rgba(0, 0, 0, 0);
-    /*box-shadow: inset 3px 3px 3px rgba(20%, 20%, 40%, 0.5);*/
-    /*box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.5) inset;*/
+@media screen and (min-width:300px) and (max-width:919px) {
+    .p2_but {
+        border: 0px #4d342f solid;
+        /*border-radius: 10px;*/
+        /*color: #4d342f;*/
+        color: #efebe9;
+        text-align: center;
+        background: #4d342f;
+        /*border: 0px;*/
+        z-index: 2;
+        opacity: 0.8;
+        transition: background-color 0.5s;
+        box-shadow: 4px 4px rgba(0, 0, 0, 0.5);
+    }
+    .p2_but:hover {
+        color: #4d342f;
+        background-color: #efebe9;
+        /*margin: 0px 0px 0 0;*/
+        box-shadow: 4px 4px rgba(0, 0, 0, 0);
+    }
 }
