--- a/css/pag3.css
+++ b/css/pag3.css
@@ -50,6 +50,7 @@
     /*border: 0px #4d342f solid;*/
     margin-left: -30px;
     margin-top: +5px;
+    font-size: 25px;
     /*border-radius: 10px;*/
     /*color: #4d342f;*/
     color: #efebe9;
