--- a/css/pag2.css
+++ b/css/pag2.css
@@ -6,8 +6,8 @@
         top: 150%;
         left: 50%;
         display: none;
-        border: 0px solid;
-        border-radius: 10px;
+        /*border: 0px solid;*/
+        /*border-radius: 10px;*/
         background-color: #4d342f;
         width: 700px;
         margin: -50px 0 0 -350px;
@@ -37,7 +37,42 @@
     }
 }
 
-@media screen and (min-width:300px) and (max-width:919px) {
+@media screen and (min-width:720px) and (max-width:920px) {
+    .p2_but {
+        font-size: 30px;
+        border: 0px #4d342f solid;
+        /*border-radius: 10px;*/
+        /*color: #4d342f;*/
+        color: #efebe9;
+        text-align: center;
+        background: #4d342f;
+        /*border: 0px;*/
+        z-index: 2;
+        opacity: 0.8;
+        transition: background-color 0.5s;
+        box-shadow: 4px 4px rgba(0, 0, 0, 0.5);
+    }
+    .p2_but:hover {
+        color: #4d342f;
+        background-color: #efebe9;
+        /*margin: 0px 0px 0 0;*/
+        box-shadow: 4px 4px rgba(0, 0, 0, 0);
+    }
+    .p2_main {
+        color: #fff;
+        width: 600px;
+        /*float: left;*/
+        margin: 45px 0 0 100px;
+        padding: 2px 2px 0px 2px;
+        display: none;
+        /*border: 0px solid;*/
+        /*border-radius: 10px;*/
+        background-color: #4d342f;
+        opacity: 0.7;
+    }
+}
+
+@media screen and (min-width:300px) and (max-width:720px) {
     .p2_but {
         font-size: 30px;
         border: 0px #4d342f solid;
@@ -61,12 +96,12 @@
     .p2_main {
         color: #fff;
         width: 385px;
-        float: left;
+        /*float: left;*/
         margin: 0 0 0 12px;
         padding: 2px 2px 0px 2px;
         display: none;
-        border: 0px solid;
-        border-radius: 10px;
+        /*border: 0px solid;*/
+        /*border-radius: 10px;*/
         background-color: #4d342f;
         opacity: 0.7;
     }
