--- a/css/pag2.css
+++ b/css/pag2.css
@@ -95,7 +95,7 @@
     }
     .p2_main {
         color: #fff;
-        width: 385px;
+        max-width: 95%;
         /*float: left;*/
         margin: 0 0 0 12px;
         padding: 2px 2px 0px 2px;
