--- a/css/pag3.css
+++ b/css/pag3.css
@@ -1,10 +1,11 @@
 @media (min-width:920px) {
     #pag3_text {
         text-align: center;
-        font-size: 75px;
+        font-size: 90px;
         padding-top: 5vh;
         font-weight: bold;
         color: #4d342f;
+        margin-top: 20px;
     }
     .p3_but {
         font-size: 40px;
