--- a/css/pag4.css
+++ b/css/pag4.css
@@ -1,15 +1,17 @@
 @media (min-width:920px) {
     .p4_main {
         color: #fff;
-        float: left;
+        /*float: left;*/
         top: 350%;
+        left: 50%;
         position: absolute;
         border: 0px solid;
         /*border-radius: 10px;*/
         background-color: #4d342f;
         width: 700px;
-        /*height: 300px;*/
-        margin: -100px 0 0 +250px;
+        height: 400px;
+        margin: -100px 0 0 -350px;
+        ;
         padding: 5px 5px 0px 5px;
         opacity: 0.8;
     }
@@ -30,7 +32,7 @@
 @media screen and (min-width:300px) and (max-width:720px) {
     .p4_main {
         color: #fff;
-        width: 385px;
+        max-width: 95%;
         top: 350%;
         left: 50%;
         margin: 0 0 0 12px;
