--- a/css/pag4.css
+++ b/css/pag4.css
@@ -11,9 +11,30 @@
         width: 700px;
         height: 400px;
         margin: -100px 0 0 -350px;
-        ;
         padding: 5px 5px 0px 5px;
         opacity: 0.8;
+    }
+    .p4_c {
+        position: absolute;
+        border-radius: 50%;
+        background-color: #8d6e63;
+        width: 150px;
+        height: 150px;
+        z-index: 1;
+        box-shadow: 4px 4px rgba(0, 0, 0, 0.5);
+        transition: background-color 0.5s;
+    }
+    .p4_cof {
+        position: absolute;
+        width: 150px;
+        height: 150px;
+        z-index: 2;
+    }
+    .p4_c:hover {
+        color: #4d342f;
+        background-color: #efebe9;
+        margin: 4px 4px 0 0;
+        box-shadow: 4px 4px rgba(0, 0, 0, 0);
     }
 }
 
