--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ body {
 }
 
 #forth {
-    background: url(images/pag_4.jpg) 50% 0 no-repeat fixed;
+    background: url(images/pag_4_1.jpg) 50% 0 no-repeat fixed;
     /*opacity: 0.7;*/
     background-size: cover;
     margin: 0 auto;
