--- a/css/pag4.css
+++ b/css/pag4.css
@@ -1,28 +1,20 @@
-@media (min-width:920px) {
+@media (min-width:990px) {
     .p4_main_1 {
+        text-align: center;
+        line-height: 90px;
         display: none;
         color: #fff;
         background-color: #4d342f;
+        font-size: 20px;
         width: 100px;
-        height: 200px;
-        margin: +120px 0 0 +28px;
+        height: 350px;
+        margin: +110px 0 0 +28px;
         padding: 50px 5px 0px 5px;
         opacity: 0.8;
+        writing-mode: vertical-lr;
     }
-    .p4_main {
-        color: #fff;
-        /*float: left;*/
-        top: 350%;
-        left: 50%;
-        position: absolute;
-        border: 0px solid;
-        /*border-radius: 10px;*/
-        background-color: #4d342f;
-        width: 700px;
-        height: 400px;
-        margin: -100px 0 0 -350px;
-        padding: 5px 5px 0px 5px;
-        opacity: 0.8;
+    .p4_main, .p4_but {
+        display: none;
     }
     .p4_c {
         position: absolute;
@@ -48,20 +40,90 @@
     }
 }
 
-@media screen and (min-width:720px) and (max-width:920px) {
+@media screen and (min-width:720px) and (max-width:990px) {
+    .p4_cof, .p4_main_1 {
+        display: none;
+    }
+    .p4_but {
+        font-size: 30px;
+        border: 0px #4d342f solid;
+        /*border-radius: 10px;*/
+        /*color: #4d342f;*/
+        color: #efebe9;
+        text-align: center;
+        background: #4d342f;
+        /*border: 0px;*/
+        z-index: 2;
+        opacity: 0.8;
+        transition: background-color 0.5s;
+        box-shadow: 4px 4px rgba(0, 0, 0, 0.5);
+    }
+    .p4_but:hover {
+        color: #4d342f;
+        background-color: #efebe9;
+        /*margin: 0px 0px 0 0;*/
+        box-shadow: 4px 4px rgba(0, 0, 0, 0);
+    }
     .p4_main {
         color: #fff;
         width: 600px;
-        margin: 45px 0 0 150px;
+        height: 200px;
+        /*float: left;*/
+        left: 50%;
+        margin: 0 0 0 +160px;
         padding: 2px 2px 0px 2px;
-        /*display: none;*/
+        display: none;
         background-color: #4d342f;
         opacity: 0.7;
     }
+    /*.p4_main {
+        color: #fff;
+        height: 200px;
+        width: 600px;
+        margin: 45px 0 0 150px;
+        padding: 2px 2px 0px 2px;
+        background-color: #4d342f;
+        opacity: 0.7;
+    }*/
 }
 
 @media screen and (min-width:300px) and (max-width:720px) {
+    .p4_cof, .p4_main_1 {
+        display: none;
+    }
+    .p4_but {
+        font-size: 30px;
+        border: 0px #4d342f solid;
+        /*border-radius: 10px;*/
+        /*color: #4d342f;*/
+        color: #efebe9;
+        text-align: center;
+        background: #4d342f;
+        /*border: 0px;*/
+        z-index: 2;
+        opacity: 0.8;
+        transition: background-color 0.5s;
+        box-shadow: 4px 4px rgba(0, 0, 0, 0.5);
+    }
+    .p4_but:hover {
+        color: #4d342f;
+        background-color: #efebe9;
+        /*margin: 0px 0px 0 0;*/
+        box-shadow: 4px 4px rgba(0, 0, 0, 0);
+    }
     .p4_main {
+        color: #fff;
+        max-width: 95%;
+        /*float: left;*/
+        margin: 0 0 0 12px;
+        padding: 2px 2px 0px 2px;
+        display: none;
+        /*border: 0px solid;*/
+        /*border-radius: 10px;*/
+        background-color: #4d342f;
+        opacity: 0.7;
+    }
+    /*.p4_main {
         color: #fff;
         max-width: 95%;
         top: 350%;
@@ -70,5 +132,5 @@
         padding: 2px 2px 0px 2px;
         background-color: #4d342f;
         opacity: 0.7;
-    }
+    }*/
 }
