--- a/main.css
+++ b/main.css
@@ -67,8 +67,7 @@ body {
 }
 
 #five {
-    background: url(images/pag_5.jpg) 50% 0 no-repeat fixed;
-    /*background: #ffcc99 50% 0 no-repeat fixed;*/
+    background: url(images/pag_5.jpg);
     background-size: cover;
     height: 100vh;
     /*width: 100%;*/
