--- a/css/pag4.css
+++ b/css/pag4.css
@@ -7,10 +7,11 @@
         background-color: #4d342f;
         font-size: 20px;
         width: 100px;
-        height: 350px;
+        height: 330px;
         margin: +110px 0 0 +28px;
         padding: 50px 5px 0px 5px;
         opacity: 0.8;
+        -webkit-writing-mode: vertical-lr;
         writing-mode: vertical-lr;
     }
     .p4_main, .p4_but {
