更改頁面三背景

--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ body {
 }
 
 #third {
-    background: url(images/pag_3.jpg) 50% 0 no-repeat fixed;
+    background: url(images/pag_3_2.jpg) 50% 0 no-repeat fixed;
     /*opacity: 0.7;*/
     /*color: white;*/
     height: 100vh;
