--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ body {
 }
 
 #five {
-    background: url(images/pag_5.jpg);
+    background: url(images/pag_5.jpg) 50% 0 no-repeat fixed;
     background-size: cover;
     height: 100vh;
     /*width: 100%;*/
